@@ -60,6 +60,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * RenderHash
 * NoMoveUserPages
 * Special:Nuke to mass delete all pages created by a user
+* Poem (patch by Nathaniel Herman)
 
 === New features in 1.14 ===
 
